==================
### 1.3.4 (beta)
==================

Hopefully the last beta.

Bug fixes:
- Fixed shopAuto_open timing problems with sitAuto (also changed ai_shop
  timeout)
- Added optional teleportAuto_unstuck to use teleport when stucked
- Fixed command "timeout" not displaying the current timeout


==================
### 1.3.3 (beta)
==================

Bug fixes:
- Fixed useSelf_skill. It didn't work in the previous beta because of a typo.
- Fixed party skills; they weren't working because of typos.
- Fixed shopAuto_open flooding console with "A shop has already been opened.".
- Fixed route AI not decreasing step size when stuck

New features:
- 'al', 'testshop' and 'openshop' commands now display the shop title


==================
### 1.3.2 (beta)
==================

NOTES:
- Because of a routing bugfix, portalsLOS.txt will need an update. It's
  recommended that you do one of the following things:
  * Download the latest tablepack, and extract portalsLOS.txt into your
    tables folder.
  - OR -
  * Delete your portalsLOS.txt and let Kore recompile it.
- Shop.txt format has changed! See below.
- Syntax of the console command "conf" has changed! See below.
- The attack routing behavior has changed. It's recommended that you
  lower your attackDistance to 1.5.

Bugs:
- attackAuto_onlyWhenSafe doesn't work.

New features:
- X-Kore works on Windows 98/ME now!
- Properly recognizes advanced seconds classes.
- The console window title now displays useful information.
- Rudimentary Abracadabra support. Set 'noAutoSkill 1' in config.txt,
  then keep using 'ss' command to cast Abracadabra. If it says that you're
  permitted to use Mono Cell, Summon Monster or Class Change, you can then
  activate those skills using 'monocell <#>', 'monster' or 'mvp <#>'.
- Ability to only active a skill/use an item, if you have a certain item
  in inventory.
  This is useful for skills that require an item in the inventory (Stone
  Curse, Warp, Aqua Benedicta, etc.)